# ProjectCartesian

./: .dockerignore  .gitignore  README.md  build_linux.sh  build_windows.bat
docs/: project_state.md
iso/: Dockerfile  Dockerfile.compiler  Dockerfile.packager  build.sh  build_stage1.sh  build_stage2.sh  entrypoint_compiler.sh  entrypoint_packager.sh
iso/archiso_profile/: build.sh  packages.x86_64  pacman.conf  profiledef.sh
iso/archiso_profile/airootfs/etc/: fstab  group  hostname  issue  mkinitcpio.conf  os-release  passwd  shadow  sudoers
iso/archiso_profile/airootfs/etc/systemd/system/getty@tty1.service.d/: autologin.conf
iso/archiso_profile/airootfs/home/cartesian/: .bash_profile  .bashrc
iso/archiso_profile/airootfs/home/cartesian/.cargo/: config.toml
iso/archiso_profile/airootfs/home/cartesian/.config/hypr/: hyprland.conf
iso/archiso_profile/airootfs/home/cartesian/.config/waybar/: style.css
iso/archiso_profile/grub/: grub.cfg  loopback.cfg
iso/archiso_profile/syslinux/: archiso_head.cfg  archiso_pxe-linux.cfg  archiso_sys-linux.cfg
pkg/: 50-cartesian.rules  PKGBUILD  cartesian-admin.sh  cartesian-core-0.1.0-1-x86_64.pkg.tar.zst.sig  cartesian-core-0.1.0-2-x86_64.pkg.tar.zst.sig  cartesian-core-debug-0.1.0-1-x86_64.pkg.tar.zst.sig  cartesian-core-debug-0.1.0-2-x86_64.pkg.tar.zst.sig  install_models.sh  org.cartesian.policy
src/cartesian-core/: Cargo.toml
src/cartesian-core/.cargo/: config.toml
src/cartesian-core/src/: audio.rs  config.rs  hippocampus.rs  inference.rs  lobotomy.rs  main.rs  schema.rs  witness.rs
src/cartesian-core/src-tauri/: Cargo.toml  cargo.toml  main  tauri.conf.json
src/cartesian-core/src-tauri/src/: lobotomy.rs  main.rs
src/cartesian-core/src-ui/: package-lock.json  package.json
src/cartesian-core/src-ui/src/: App.tsx  index.css
src/cartesian-core/src/ui/: chat.rs  dashboard.rs  mod.rs  style.rs
src/configs/: hyprland.conf  waybar_style.css
