[package]
name = "cartesian-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# The GUI Library
iced = { version = "0.13", features = ["canvas", "tokio"] }

# System Monitoring
sysinfo = "0.30"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Shared Memory (Witness)
memmap2 = "0.9"

# --- THE MIND (Hippocampus & Brain) ---

# Generic Parsing
regex = "1.10"

# Compression
zstd = "0.13"

# JSON Handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Machine Learning (Embeddings)
candle-core = "0.3"
candle-nn = "0.3"
candle-transformers = "0.3"
tokenizers = "0.15"

# LLM Inference (Chat)
# llama-cpp-2 provides safe bindings to the C++ library
llama-cpp-2 = "0.1"