[package]
name = "cartesian-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# The GUI Library
iced = { version = "0.14", features = ["canvas", "tokio"] }

# System Monitoring
sysinfo = "0.37"

# Async Runtime
tokio = { version = "1", features = ["full"] }

# Shared Memory (Witness)
memmap2 = "0.9"

# --- THE MIND (Hippocampus & Brain) ---

# Generic Parsing
regex = "1.12"

# Compression
zstd = "0.13"

# JSON Handling
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Machine Learning (Embeddings)
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
tokenizers = "0.22"

# LLM Inference (Chat)
llama-cpp-2 = "0.1"
