[package]
name = "cartesian-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI & Async
iced = { version = "0.14", features = ["canvas", "tokio"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.37"
memmap2 = "0.9"
image = "0.25"
anyhow = "1.0"
thiserror = "1.0"

# Parsing
regex = "1.12"
zstd = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# --- THE MIND (Candle) ---
candle-core = { version = "0.9.2-alpha.2", features = ["cuda"] }
candle-nn = { version = "0.9.2-alpha.2", features = ["cuda"] }
candle-transformers = { version = "0.9.2-alpha.2", features = ["cuda"] }
tokenizers = "0.20"