[package]
name = "cartesian-core"
version = "0.1.0"
description = "The AI-Centric OS Core"
authors = ["Abraham Furlan"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
# FIX: Replaced "api-all" with "shell-open" to match tauri.conf.json
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.30"
